UN Member status in readable value & Unsubscribe

--- a/src/app/country/country-list/country-list.component.html
+++ b/src/app/country/country-list/country-list.component.html
@@ -41,7 +41,7 @@
             <!-- UN Member Column -->
             <ng-container matColumnDef="unMember">
                 <th mat-header-cell *matHeaderCellDef> UN Member Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.unMember}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.unMember ? 'Yes' : 'No'}} </td>
             </ng-container>
 
             <!-- Population Column -->
@@ -57,8 +57,8 @@
             </ng-container>
 
             <!-- Map Column -->
-            <ng-container matColumnDef="flag">
-                <th mat-header-cell *matHeaderCellDef> Map </th>
+            <ng-container matColumnDef="flags">
+                <th mat-header-cell *matHeaderCellDef> Flag </th>
                 <td mat-cell *matCellDef="let element"><img width="80" height="50" src={{element.flags.png}}/></td>
             </ng-container>            
 
